# minecraft-server-manager

./: index.html  package.json
src/: app.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/utils/: discord_rpc.rs  fs.rs  mod.rs  server.rs
src/components/: Sidebar.vue  Titlebar.vue
src/components/pages/: Homepage.vue  Servers.vue  Settings.vue
src/components/pages/server/: Console.vue  Files.vue
src/services/: rpc.js  settings.js
