[package]
name = "msm"
version = "0.1.0"
description = "Minecraft Server Manager"
authors = ["grcq"]
license = ""
repository = ""
default-run = "msm"
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "http-all",
    "window-center",
    "window-unminimize",
    "window-close",
    "window-hide",
    "window-unmaximize",
    "window-minimize",
    "window-start-dragging",
    "window-show",
    "window-maximize",
    "dialog-all",
    "global-shortcut-all",
    "os-all",
    "path-all",
    "shell-execute",
    "shell-open",
    "system-tray",
] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1.0.38"
whoami = "1.5.0"
sysinfo = "0.30.12"
sha2 = "0.10.6"
rand = "0.8"
base64 = "0.22.0"
reqwest = "0.12.4"
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
